# safex

./: .gitignore  .python-version  README.md  pyproject.toml  tox.ini
.github/workflows/: build_and_test.yaml  ci.yaml  publish.yaml
pyexpr/: __init__.py  eval.py
safex/: __init__.py  eval.py
tests/: test_pyexpr.py
