[tool.poetry]
name = "safex"
version = "0.1.0"
description = ""
authors = ["Rahul Kumar <r@thoughtnirvana.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^6.1.1"}
tox = "^3.24.4"
tox-pyenv = "^1.1.0"
black = "^21.10b0"
flake8 = "^4.0.1"

[tool.coverage.run]
source = ["safex"]
branch = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
